Re-use old pages

--- a/libraries/libmdb/Makefile
+++ b/libraries/libmdb/Makefile
@@ -1,6 +1,7 @@
 CC	= gcc
 W	= -W -Wall -Wno-unused-parameter -Wcast-qual -Wbad-function-cast
-CFLAGS	= -pthread -O2 -g $(W) $(XCFLAGS)
+OPT = -O2 -g
+CFLAGS	= -pthread $(OPT) $(W) $(XCFLAGS)
 LDLIBS	= -lssl
 
 all:	mtest mdb_stat
@@ -11,8 +12,8 @@ clean:
 test:	all
 	./mtest && ./mdb_stat testdb
 
-mdb_stat: mdb_stat.o mdb.o
-mtest:    mtest.o    mdb.o
+mdb_stat: mdb_stat.o mdb.o idl.o
+mtest:    mtest.o    mdb.o idl.o
 
 %:	%.o mdb.o
 	$(CC) $(CFLAGS) $(LDFLAGS) $^ $(LDLIBS) -o $@
