No longer need -lssl

--- a/libraries/libmdb/Makefile
+++ b/libraries/libmdb/Makefile
@@ -2,7 +2,7 @@ CC	= gcc
 W	= -W -Wall -Wno-unused-parameter -Wcast-qual -Wbad-function-cast
 OPT = -O2 -g
 CFLAGS	= -pthread $(OPT) $(W) $(XCFLAGS)
-LDLIBS	= -lssl
+LDLIBS	=
 
 all:	mtest mdb_stat
 
