Use an environment directory
Go back to using an mmap'd lock file

--- a/libraries/libmdb/Makefile
+++ b/libraries/libmdb/Makefile
@@ -7,9 +7,10 @@ LDLIBS	=
 all:	mtest mdb_stat
 
 clean:
-	rm -f mtest mdb_stat *.[ao] *~ testdb
+	rm -rf mtest mdb_stat *.[ao] *~ testdb
 
 test:	all
+	mkdir testdb
 	./mtest && ./mdb_stat testdb
 
 mdb_stat: mdb_stat.o mdb.o idl.o
