On-demand pagemapping for 32bit mode
Build with -DVL32 to enable.

--- a/libraries/liblmdb/Makefile
+++ b/libraries/liblmdb/Makefile
@@ -24,6 +24,7 @@ CFLAGS	= $(THREADS) $(OPT) $(W) $(XCFLAGS)
 LDLIBS	=
 SOLIBS	=
 prefix	= /usr/local
+XCFLAGS = -DVL32
 
 ########################################################################
 
