--- a/libraries/liblmdb/Makefile
+++ b/libraries/liblmdb/Makefile
@@ -42,7 +42,7 @@ ILIBS	= liblmdb.a liblmdb$(SOEXT)
 IPROGS	= mdb_stat mdb_copy mdb_dump mdb_load mdb_drop
 IDOCS	= mdb_stat.1 mdb_copy.1 mdb_dump.1 mdb_load.1 mdb_drop.1
 PROGS	= $(IPROGS) mtest mtest2 mtest3 mtest4 mtest5
-RPROGS	= mtest_remap mtest_enc
+RPROGS	= mtest_remap mtest_enc mtest_enc2
 
 all:	$(ILIBS) $(PROGS)
 # Requires CPPFLAGS=-DMDB_VL32 and/or -DMDB_RPAGE_CACHE
@@ -85,6 +85,9 @@ mtest5:	mtest5.o liblmdb.a
 mtest6:	mtest6.o liblmdb.a
 mtest_remap:  mtest_remap.o liblmdb.a
 mtest_enc:    mtest_enc.o chacha8.o liblmdb.a
+mtest_enc2:	  mtest_enc2.o crypto.o liblmdb.a
+	$(CC) $(LDFLAGS) -pthread -o $@ $^ -lcrypto
+
 
 mdb.o: mdb.c lmdb.h midl.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c mdb.c
