Move the crypto module helpers into main liblmdb.
Just makes things easier than using the individual mdb_env_set APIs.

--- a/libraries/liblmdb/Makefile
+++ b/libraries/liblmdb/Makefile
@@ -74,15 +74,15 @@ liblmdb$(SOEXT):	mdb.lo midl.lo
 #	$(CC) $(LDFLAGS) -pthread -shared -Wl,-Bsymbolic -o $@ mdb.o midl.o $(SOLIBS)
 	$(CC) $(LDFLAGS) -pthread -shared -o $@ mdb.lo midl.lo $(SOLIBS)
 
-mdb_stat: mdb_stat.o module.o liblmdb.a
+mdb_stat: mdb_stat.o liblmdb.a
 	$(CC) $(LDFLAGS) -o $@ $^ $(LDL)
-mdb_copy: mdb_copy.o module.o liblmdb.a
+mdb_copy: mdb_copy.o liblmdb.a
 	$(CC) $(LDFLAGS) -o $@ $^ $(LDL)
-mdb_dump: mdb_dump.o module.o liblmdb.a
+mdb_dump: mdb_dump.o liblmdb.a
 	$(CC) $(LDFLAGS) -o $@ $^ $(LDL)
-mdb_load: mdb_load.o module.o liblmdb.a
+mdb_load: mdb_load.o liblmdb.a
 	$(CC) $(LDFLAGS) -o $@ $^ $(LDL)
-mdb_drop: mdb_drop.o module.o liblmdb.a
+mdb_drop: mdb_drop.o liblmdb.a
 	$(CC) $(LDFLAGS) -o $@ $^ $(LDL)
 mtest:    mtest.o    liblmdb.a
 mtest2:	mtest2.o liblmdb.a
@@ -92,8 +92,8 @@ mtest5:	mtest5.o liblmdb.a
 mtest6:	mtest6.o liblmdb.a
 mtest_remap:  mtest_remap.o liblmdb.a
 mtest_enc:    mtest_enc.o chacha8.o liblmdb.a
-mtest_enc2:	  mtest_enc2.o module.o liblmdb.a crypto.lm
-	$(CC) $(LDFLAGS) -pthread -o $@ mtest_enc2.o module.o liblmdb.a $(LDL)
+mtest_enc2:	  mtest_enc2.o liblmdb.a crypto.lm
+	$(CC) $(LDFLAGS) -pthread -o $@ mtest_enc2.o liblmdb.a $(LDL)
 
 mplay:	mplay.o liblmdb.a
 
